finalizada a responsividade, git final.

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
         <div class="mb-4">
             <h3>Cadastro</h3>
         </div>
-        <form class="formulario">
+        <form class="formulario d-md-block">
             <div class="row ">
-                <div class="col-3">
-                    <input type="text" class="form-control nome " placeholder="Nome">
+                <div class="col-sm-12 col-md-3 mb-4">
+                    <input type="text" class="form-control nome  " placeholder="Nome">
                 </div>
-                <div class="col-3">
-                    <input type="text" class="form-control" placeholder="Sobre nome">
+                <div class="col-sm-12 col-md-3 mb-4">
+                    <input type="text" class="form-control " placeholder="Sobre nome">
                 </div>
-                <div class="col-3">
-                    <input type="tel" class="form-control numero" placeholder="Número">
+                <div class="col-sm-12 col-md-3 mb-4">
+                    <input type="tel" class="form-control numero " placeholder="Número">
                 </div>
-                <div class="col-3">
-                    <input type="email" class="form-control e-mail" placeholder="E-mail">
+                <div class="col-sm-12 col-md-3 mb-4">
+                    <input type="email" class="form-control e-mail " placeholder="E-mail">
                 </div>
             </div>
             <div class="mt-4 mb-4">
                 <h3>Endereço</h3>
             </div>
             <div class="row">
-                <div class="col-2 d-flex">
+                <div class="col-md-4 col-lg-2 col-sm-12 d-flex mb-4">
                     <input type="text" class="form-control cep" placeholder="CEP">
                     <div class="ms-2">
                         <button type="button" class="btn btn-primary cep-button">
@@ -45,19 +45,19 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-1">
+                <div class="col-md-4 col-lg-1 col-sm-4 mb-4">
                     <input type="number" class="form-control" placeholder="N°">
                 </div>
-                <div class="col-3">
+                <div class="col-md-4 col-lg-3 col-sm-8 mb-4">
                     <input type="text" class="form-control rua" placeholder="rua">
                 </div>
-                <div class="col-2">
+                <div class="col-md-4 col-lg-2 col-sm-5 mb-4">
                     <input type="text" class="form-control bairro" placeholder="bairro">
                 </div>
-                <div class="col-2">
+                <div class="col-md-4 col-lg-3 col-12 mb-4 ">
                     <input type="text" class="form-control cidade" placeholder="cidade">
                 </div>
-                <div class="col-2">
+                <div class="col-12 col-lg-1 col-md-4">
                     <input type="text" class="form-control estado" placeholder="estado">
                 </div>
             </div>
